--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -7,25 +7,33 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <div *ngIf="!loadedBookings || loadedBookings.length === 0" style="text-align: center;">
+<ion-content>
+  <div *ngIf="isLoading" style="margin-top: 20px;" class="ion-text-center">
+    <ion-spinner color="danger"></ion-spinner>
+  </div>
+  <div *ngIf="!isLoading && (!loadedBookings || loadedBookings.length === 0)" style="text-align: center;">
     <p style="font-size: large;">No Bookings Found!</p>
   </div>
-  <div *ngIf="loadedBookings && loadedBookings.length>0">
-    <ion-list>
-      <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingItem>
-        <ion-item>
-          <ion-label>
-            <h5>{{ booking.placeTitle }}</h5>
-            <p>Guests: {{ booking.guestNum }}</p>
-          </ion-label>
-        </ion-item>
-        <ion-item-options>
-          <ion-item-option color="danger" (click)="cancelBooking(booking.id,slidingItem)">
-            <ion-icon name="trash" slot="icon-only"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-    </ion-list>
+  <div class="ion-text-center" style="margin-top:10px;">
+    <ion-note style="font-weight: 700;" color="medium">swipe left to cancel bookings</ion-note>
   </div>
+  <ion-list *ngIf="!isLoading && loadedBookings.length>0 && loadedBookings">
+    <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingItem>
+      <ion-item>
+        <ion-avatar style="width: 70px;height: 70px;">
+          <ion-img [src]="booking.placeImage"></ion-img>
+        </ion-avatar>
+        <ion-label class="ion-text-wrap" style="margin-left: 20px;">
+          <p style="margin: 0;padding: 0;color: black;font-weight: 700;">{{ booking.placeTitle }}</p>
+          <p style="margin: 0;padding: 0;">Guests : {{ booking.guestNum }}</p>
+          <p style="margin: 0;padding: 0;">Booked from {{booking.bookedFrom|date}} to {{booking.bookedTo|date}}</p>
+        </ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="cancelBooking(booking.id,slidingItem)">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
