--- a/src/app/places/find/place-detail/place-detail.page.html
+++ b/src/app/places/find/place-detail/place-detail.page.html
@@ -3,12 +3,15 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/find"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ place.title }}</ion-title>
+    <ion-title>{{ isLoading ? 'Loading...' : place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid class="ion-no-padding">
+  <div class="ion-text-center" *ngIf="isLoading" style="margin: 40px;">
+    <ion-spinner color="danger"></ion-spinner>
+  </div>
+  <ion-grid class="ion-no-padding" *ngIf="!isLoading">
     <ion-row>
       <ion-col size-md="6" offset-md="3" class="ion-no-padding">
         <ion-img [src]="place.imageUrl"></ion-img>
@@ -19,9 +22,14 @@
         <p style="font-size: large;">{{ place.description }}</p>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3" class="ion-text-center">
+        <ion-text style="font-size: large;" color="medium">Only costs {{ place.price | currency:'INR' }} per day</ion-text>
+      </ion-col>
+    </ion-row>
     <ion-row *ngIf="isBookable">
       <ion-col size-md="6" offset-md="3" class="ion-text-center">
-        <ion-button color='primary' (click)='onBookPlace()'>Book</ion-button>
+        <ion-button color='primary' (click)='onBookPlace()' style="margin-top:20px;">Book</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
