--- a/src/app/places/find/place-detail/place-detail.page.html
+++ b/src/app/places/find/place-detail/place-detail.page.html
@@ -18,21 +18,21 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size-md="6" offset-md="3" class="ion-text-center">
+      <ion-col size-md="6" offset-md="3" class="ion-text-center" style="margin-top: 30px;">
         <p style="font-size: large;">{{ place.description }}</p>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size-md="6" offset-md="3" class="ion-text-center">
+      <ion-col size-md="6" offset-md="3" class="ion-text-center" style="margin-top: 20px;">
         <ion-text style="font-size: large;" color="medium">Only costs {{ place.price | currency:'INR' }} per day</ion-text>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="place.location">
       <ion-col size-md="6" offset-md="3" class="ion-padding" style="text-align: center;">
         <p>{{ place.location.address }}</p>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="place.location"> 
       <ion-col size-md="6" offset-md="3" class="ion-no-padding" style="text-align: center;">
         <ion-img [src]="place.location.staticMapImageUrl" (click)="ShowMap()" class="location-image" role="button"></ion-img>
       </ion-col>
